# claude-split-monitor

./: CLAUDE.md  HANDOFF.md  README.md  ROADMAP.md  dashboard.html  pyproject.toml  server.py
.claude/: cowork.md
.claude/inbox/: desktop.md  terminal.md
app/ClaudeSplit/: .gitignore  Package.swift  make-app.sh
app/ClaudeSplit/.build/: build.db  debug.yaml  release.yaml
app/ClaudeSplit/.build/arm64-apple-macosx/debug/: ClaudeSplit  plugin-tools-description.json
app/ClaudeSplit/.build/arm64-apple-macosx/debug/ClaudeSplit.build/: ClaudeSplit.emit-module.d  ClaudeSplitApp.d  ClaudeSplitApp.swiftdeps  ClaudeSplitApp.swiftdeps~  WatchClient.d  WatchClient.swiftdeps  WatchClient.swiftdeps~  WebView.d  WebView.swiftdeps  master.priors  output-file-map.json  sources
app/ClaudeSplit/.build/arm64-apple-macosx/debug/ClaudeSplit.product/: Objects.LinkFileList
app/ClaudeSplit/.build/arm64-apple-macosx/debug/Modules/: ClaudeSplit.swiftdoc  ClaudeSplit.swiftmodule  ClaudeSplit.swiftsourceinfo
app/ClaudeSplit/.build/arm64-apple-macosx/release/: ClaudeSplit  description.json
app/ClaudeSplit/.build/arm64-apple-macosx/release/ClaudeSplit.build/: ClaudeSplit.d  master.swiftdeps  output-file-map.json
app/ClaudeSplit/.build/arm64-apple-macosx/release/Modules/: ClaudeSplit.swiftmodule  (+1 more)
app/ClaudeSplit/Sources/ClaudeSplit/: ClaudeSplitApp.swift  WatchClient.swift  WebView.swift
claude_split_monitor/: __init__.py  cli.py  dashboard.html  server.py
claude_split_monitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: index.html
(+357 files in other folders)
